# ask-cli

./: Cargo.toml  README.md  api.golden
.github/workflows/: cid.yml
src/: lib.rs  main.rs
tests/: api.rs
tests/cmds/: attempted-answer.toml  crash-answer1.toml  crash-answer2.toml  crash-answer3.toml  empty-answer.toml  empty-arg.toml  garbage-answer.toml  mixed-newlines-answer.toml  multi-arg.toml  simple-no-full.toml  simple-no-short.toml  simple-yes-enter-r.toml  simple-yes-enter-rn.toml  simple-yes-enter.toml  simple-yes-full.toml  simple-yes-short.toml  weird-case-answer1.toml  weird-case-answer2.toml  weird-case-answer3.toml
